Serialization refactor tests
* refactor: Refactor Kafka actors and actions, introduce new simulations, and add CI/CD workflow
added correlation by value, custom serialization

* removed target from gitignore

* commit cleanup

* added license